tests/ui/let-else/let-else-binding-explicit-mut.stderr
error[E0594]: cannot assign to `*n`, which is behind a `&` reference
  --> $DIR/let-else-binding-explicit-mut.rs:10:5
   |
LL |     *n += 1;
   |     ^^^^^^^ `n` is a `&` reference, so the data it refers to cannot be written

error[E0594]: cannot assign to `*n`, which is behind a `&` reference
  --> $DIR/let-else-binding-explicit-mut.rs:14:5
   |
LL |     *n += 1;
   |     ^^^^^^^ `n` is a `&` reference, so the data it refers to cannot be written

error[E0594]: cannot assign to `*n`, which is behind a `&` reference
  --> $DIR/let-else-binding-explicit-mut.rs:18:5
   |
LL |     *n += 1;
   |     ^^^^^^^ `n` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0594`.
